infrastructure/configs/base/cilium/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
  labels:
    app.kubernetes.io/name: hubble-ui
  annotations:
    gethomepage.dev/app: hubble-ui
    gethomepage.dev/description: Hubble
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Homelab
    gethomepage.dev/icon: cilium.png
    gethomepage.dev/name: Hubble
    gethomepage.dev/statusStyle: dot
spec:
  parentRefs:
    - name: gateway
      namespace: kube-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: hubble-ui
          port: 80
